--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,7 +16,7 @@ jobs:
           python3 -m pip install sphinx furo
       - name: Sphinx build
         run: |
-          export PYTHONPATH=$PYTHONPATH:$PWD
+          python3 setup.py install
           sphinx-build doc _build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
