--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -17,7 +17,7 @@ jobs:
           python3 -m pip install setuptools sphinx furo
       - name: Sphinx build
         run: |
-          python3 setup.py install
+          python3 -m pip install .
           sphinx-build doc _build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
