--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install pre-requisites
         run: |
           sudo apt-get update
-          sudo apt-get -y install python3-scipy python3-numpy
+          sudo apt-get -y install python3-scipy python3-numpy python3-matplotlib
 
       - name: Run test
         run: |
