Install extension in github workflow

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,6 +16,7 @@ jobs:
           python3 -m pip install numpy scipy matplotlib
           python3 -m pip install setuptools sphinx furo
           python3 -m pip install sphinxcontrib-bibtex
+          python3 -m pip install sphinx-copybutton
       - name: Sphinx build
         run: |
           python3 -m pip install .
